cmd: test_enter_suspend: Add test_enter_suspend command
Add test_enter_suspend command using PSCI.
This command is only to test suspend sequence from U-Boot.
The resume will not work.

Signed-off-by: Gregory CLEMENT <gregory.clement@bootlin.com>
Signed-off-by: Thomas Richard <thomas.richard@bootlin.com>

--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -1410,6 +1410,13 @@ config CMD_POWEROFF
 	help
 	  Poweroff/Shutdown the system
 
+config CMD_TEST_ENTER_SUSPEND
+	bool "test enter suspend"
+	depends on ARM
+	select ARM_SMCCC
+	help
+	  Command to test the suspend sequence (only for test)
+
 config CMD_READ
 	bool "read - Read binary data from a partition"
 	help
