arm: dts: ti: k3-j7200: add reserved memory regions for lpm
Signed-off-by: Thomas Richard <thomas.richard@bootlin.com>

--- a/arch/arm/dts/k3-j7200-som-p0.dtsi
+++ b/arch/arm/dts/k3-j7200-som-p0.dtsi
@@ -79,6 +79,15 @@
 			alignment = <0x1000>;
 			no-map;
 		};
+		lpm_r5_spl_ctx_ddr: lpm-memory@a5000000 {
+			reg = <0x00 0xa6000000 0x00 0x1000000>;
+			no-map;
+		};
+
+		lpm_bl31_ctx_ddr: lpm-memory@a6000000 {
+			reg = <0x00 0xa7000000 0x00 0x20000>;
+			no-map;
+		};
 	};
 };
 
