arm: dts: copy am62p dtbs from linux v6.9-rc2
v2024.04 does not have support for the OF_UPSTREAM config option which
was used for the upstream support for the am62px. So copy the linux dtbs
from the v6.9-rc2 Linux kernel and disable the OF_UPSTREAM config to
successfully backport am62px support.

Signed-off-by: Bryan Brattlof <bb@ti.com>

--- a/arch/arm/dts/k3-am62p-sk-binman.dtsi
+++ b/arch/arm/dts/k3-am62p-sk-binman.dtsi
@@ -63,7 +63,7 @@
 
 #if IS_ENABLED(CONFIG_TARGET_AM62P5_A53_EVM)
 
-#define SPL_AM62PX_SK_DTB "spl/dts/ti/k3-am62p5-sk.dtb"
+#define SPL_AM62PX_SK_DTB "spl/dts/k3-am62p5-sk.dtb"
 #define AM62PX_SK_DTB "u-boot.dtb"
 
 &binman {
