--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -1427,6 +1427,8 @@ dtb-$(CONFIG_SOC_K3_J784S4) += k3-am69-sk.dtb \
 			       k3-j784s4-evm.dtb \
 			       k3-j784s4-r5-evm.dtb \
 
+dtb-$(CONFIG_SOC_K3_J722S) += k3-j722s-r5-evm.dtb
+
 dtb-$(CONFIG_SOC_K3_AM642) += k3-am642-evm.dtb \
 			      k3-am642-r5-evm.dtb \
 			      k3-am642-sk.dtb \
