--- a/arch/arm/dts/k3-j722s-binman.dtsi
+++ b/arch/arm/dts/k3-j722s-binman.dtsi
@@ -62,7 +62,7 @@
 
 #if IS_ENABLED(CONFIG_TARGET_J722S_A53_EVM)
 
-#define SPL_J722S_EVM_DTB "spl/dts/ti/k3-j722s-evm.dtb"
+#define SPL_J722S_EVM_DTB "spl/dts/k3-j722s-evm.dtb"
 #define J722S_EVM_DTB "u-boot.dtb"
 
 &binman {
