--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -1442,7 +1442,9 @@ dtb-$(CONFIG_SOC_K3_AM625) += k3-am625-sk.dtb \
 			      k3-am625-verdin-wifi-dev.dtb \
 			      k3-am625-verdin-r5.dtb \
 			      k3-am625-phyboard-lyra-rdk.dtb \
-			      k3-am625-r5-phycore-som-2gb.dtb
+			      k3-am625-r5-phycore-som-2gb.dtb \
+			      k3-am62-lp-sk.dtb \
+			      k3-am62-r5-lp-sk.dtb
 
 dtb-$(CONFIG_SOC_K3_AM62A7) += k3-am62a7-sk.dtb \
 			      k3-am62a7-r5-sk.dtb
