configs: am62ax_evm_*: Add USB MSC boot support
Add config fragments for both A53 and R5 to support USB MSC
boot. On the R5, few options are disabled to free up space
for USB support.

USB Host boot is supported only from USB0 port. By default
USB0 is configured in peripheral mode to support DFU.
Inorder to support USB MSC boot, "dr_mode" property
needs to be changed from "peripheral" to "host" in
the device tree.

Signed-off-by: Ravi Gunasekaran <r-gunasekaran@ti.com>

--- a/configs/am62ax_evm_a53_defconfig
+++ b/configs/am62ax_evm_a53_defconfig
@@ -90,3 +90,4 @@ CONFIG_FS_FAT_MAX_CLUSTSIZE=16384
 CONFIG_DM_SPI_FLASH=y
 
 #include <configs/am62ax_a53_usbdfu.config>
+#include <configs/am62ax_a53_usbmsc.config>
