arm: dts: k3-j722s-evm: Enable eMMC support
The J722S EVM has an on-board eMMC. Enable the SDHC interface for it.
There is no pinmuxing required because the interface has dedicated pins.

Signed-off-by: Bhavya Kapoor <b-kapoor@ti.com>

--- a/arch/arm/dts/k3-j722s-evm.dts
+++ b/arch/arm/dts/k3-j722s-evm.dts
@@ -369,6 +369,15 @@
 
 };
 
+&sdhci0 {
+	/* eMMC */
+	disable-wp;
+	bootph-all;
+	non-removable;
+	ti,driver-strength-ohm = <50>;
+	status = "okay";
+};
+
 &sdhci1 {
 	/* SD/MMC */
 	vmmc-supply = <&vdd_mmc1>;
