arm: dts: k3-j7200-r5: Add the pmic node in R5 dt
Add bootph-pre-ram property to the buck node in the pmic needed for
ESM error event handling.

Signed-off-by: Aniket Limaye <a-limaye@ti.com>

--- a/arch/arm/dts/k3-j7200-r5-common-proc-board.dts
+++ b/arch/arm/dts/k3-j7200-r5-common-proc-board.dts
@@ -96,3 +96,12 @@
 &mcu_udmap {
     ti,sci = <&dm_tifs>;
 };
+
+&tps659414 {
+	regulators {
+		bucka1: buck1 {
+			bootph-pre-ram;
+		};
+	};
+};
+
