arm: dts: k3-am62p5-sk-u-boot: Use eFuse MAC Address for CPSW3G Port 1
The am65-cpsw-nuss driver supports reading the eFuse in order to fetch
the MAC Address corresponding to CPSW3G Port 1. This requires using the
"ti,syscon-efuse" property in the device-tree with the phandle to the
eFuse registers in the CTRL_MMR region.

The equivalent Linux device-tree patch is:
Link: https://lore.kernel.org/r/20240604104425.3770037-1-s-vadapalli@ti.com/

Signed-off-by: Siddharth Vadapalli <s-vadapalli@ti.com>

--- a/arch/arm/dts/k3-am62p5-sk-u-boot.dtsi
+++ b/arch/arm/dts/k3-am62p5-sk-u-boot.dtsi
@@ -21,3 +21,14 @@
 		bootph-pre-ram;
 	};
 };
+
+&wkup_conf {
+	cpsw_mac_syscon: ethernet-mac-syscon@200 {
+		compatible = "ti,am62p-cpsw-mac-efuse", "syscon";
+		reg = <0x200 0x8>;
+	};
+};
+
+&cpsw_port1 {
+	ti,syscon-efuse = <&cpsw_mac_syscon 0x0>;
+};
