mtd: nand: spi: Enable spinand build Kconfig option for spl
Only RAW NANDs are supported in the SPL, so create a new Kconfig config
for building SPI NAND subsystem in the SPL build using
SPL_NAND_SPI_SUPPORT Kconfig option.

Signed-off-by: Apurva Nandan <a-nandan@ti.com>
Signed-off-by: Prasanth Babu Mantena <p-mantena@ti.com>

--- a/drivers/mtd/nand/spi/Makefile
+++ b/drivers/mtd/nand/spi/Makefile
@@ -2,4 +2,5 @@
 
 spinand-objs := core.o esmt.o gigadevice.o macronix.o micron.o paragon.o
 spinand-objs += toshiba.o winbond.o
+obj-$(CONFIG_$(SPL_TPL_)NAND_SPI_SUPPORT) += spinand.o
 obj-$(CONFIG_MTD_SPI_NAND) += spinand.o
