common: spl: Kconfig: Correct depends for SPL_MTD_LOAD
SPL_MTD_LOAD depends on SPL_MTD_SUPPORT, which is no longer valid.
Modifying this to SPL_MTD which is supported and fix MTD in spl.

Ref upstream commit b35df87ae5c8 ("mtd: Rename SPL_MTD_SUPPORT to SPL_MTD")

Signed-off-by: Prasanth Babu Mantena <p-mantena@ti.com>

--- a/common/spl/Kconfig
+++ b/common/spl/Kconfig
@@ -901,7 +901,7 @@ config SPL_MTD
 
 config SPL_MTD_LOAD
 	bool "Support loading from MTD framework"
-	depends on SPL_MTD_SUPPORT
+	depends on SPL_MTD
 	help
 	  Enable support for loading next stage, U-Boot or otherwise, from
 	  MTD Framework in U-Boot SPL.
