--- a/board/ti/am62x/am62x.env
+++ b/board/ti/am62x/am62x.env
@@ -1,6 +1,7 @@
 #include <env/ti/ti_common.env>
 #include <env/ti/mmc.env>
 #include <env/ti/k3_dfu.env>
+#include <env/ti/ospi_nand.env>
 
 name_kern=Image
 console=ttyS2,115200n8
