arm: dts: k3-j784s4: Enable WKUP_GPIO6 for SW3.1
SW3.1 is a physical switch muxing between OSPI NOR and OSPI NAND.
SW3.1 is connected to the wkup_gpio0_6 pin. Enable the support for
wkup_gpio0_6 for adding OSPI dual flash support.

Signed-off-by: Apurva Nandan <a-nandan@ti.com>
Signed-off-by: Prasanth Babu Mantena <p-mantena@ti.com>

--- a/arch/arm/dts/k3-j784s4-r5-evm.dts
+++ b/arch/arm/dts/k3-j784s4-r5-evm.dts
@@ -73,12 +73,26 @@
 	};
 };
 
+&wkup_pmx2 {
+	bootph-pre-ram;
+	wkup_gpio_pins_default: wkup_gpio_pins_default {
+		pinctrl-single,pins = <
+			J784S4_WKUP_IOPAD(0x070, PIN_INPUT, 7) /* (L37) WKUP_GPIO0_6 */
+		>;
+	};
+};
+
 &sms {
 	mboxes= <&secure_proxy_mcu 8>, <&secure_proxy_mcu 6>, <&secure_proxy_mcu 5>;
 	mbox-names = "tx", "rx", "notify";
 	ti,host-id = <4>;
 	ti,secure-host;
 	bootph-pre-ram;
+};
+
+&wkup_gpio0 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&wkup_gpio_pins_default>;
 };
 
 /* WKUP UART0 is used for DM firmware logs */
