arm: dts: k3-j784s4: Add node for OSPI NAND Flash
J784S4 has an OSPI NAND flash on its SOM connected the OSPI0 instance,
add dts node for the flash. This NAND flash is muxed with OSPI NOR flash
through a physical switch (SW3.1). SW3.1 when set as 1 connects the NAND
flash to the SoC.

Signed-off-by: Apurva Nandan <a-nandan@ti.com>
Signed-off-by: Prasanth Babu Mantena <p-mantena@ti.com>

--- a/arch/arm/dts/k3-j784s4-evm-u-boot.dtsi
+++ b/arch/arm/dts/k3-j784s4-evm-u-boot.dtsi
@@ -36,5 +36,48 @@
 
 &wkup_gpio0 {
 	bootph-pre-ram;
+};
 
+&wkup_pmx0 {
+	bootph-pre-ram;
+};
+
+&fss {
+	bootph-pre-ram;
+};
+
+&mcu_fss0_ospi0_pins_default {
+	bootph-pre-ram;
+};
+
+&mcu_fss0_ospi0_1_pins_default {
+	bootph-pre-ram;
+};
+
+&ospi0 {
+	bootph-pre-ram;
+
+	ospi0_nor: flash@0 {
+		bootph-pre-ram;
+
+		partitions {
+			bootph-pre-ram;
+
+			partition@3fc0000 {
+				bootph-pre-ram;
+			};
+		};
+	};
+};
+
+&ospi0_nand {
+	bootph-pre-ram;
+};
+
+&ospi1 {
+	bootph-pre-ram;
+};
+
+&ospi1_nor {
+	bootph-pre-ram;
 };
