configs: am6*_a53: Enable 'ddrss' ECC test command
Enable CONFIG_CMD_DDRSS to use the 'ddrss' command for testing ECC.

Signed-off-by: Santhosh Kumar K <s-k6@ti.com>

--- a/configs/am62px_evm_a53_defconfig
+++ b/configs/am62px_evm_a53_defconfig
@@ -58,6 +58,7 @@ CONFIG_SPL_THERMAL=y
 CONFIG_SPL_YMODEM_SUPPORT=y
 CONFIG_SYS_MAXARGS=64
 CONFIG_CMD_CLK=y
+CONFIG_CMD_DDRSS=y
 CONFIG_CMD_DFU=y
 CONFIG_CMD_DM=y
 CONFIG_CMD_GPIO=y
