arm: dts: k3-j721s2: Enable WKUP_GPIO6 for SW3.1
SW3.1 is a physical switch muxing between OSPI NOR and OSPI NAND.
SW3.1 is connected to the wkup_gpio0_6 pin. Enable the support for
wkup_gpio0_6 for adding OSPI dual flash support.

Signed-off-by: Apurva Nandan <a-nandan@ti.com>
Signed-off-by: Vignesh Raghavendra <vigneshr@ti.com>
Signed-off-by: Prasanth Babu Mantena <p-mantena@ti.com>

--- a/arch/arm/dts/k3-j721s2-common-proc-board-u-boot.dtsi
+++ b/arch/arm/dts/k3-j721s2-common-proc-board-u-boot.dtsi
@@ -109,6 +109,14 @@
 	bootph-all;
 };
 
+&wkup_gpio_pins_default {
+	bootph-all;
+};
+
+&wkup_gpio0 {
+	bootph-all;
+};
+
 &ospi0 {
 	flash@0 {
 		bootph-all;
