arm: dts: k3-j721s2: Add node for OSPI NAND Flash
J721S2 has an OSPI NAND flash on its SOM connected the OSPI0 instance,
add dts node for the flash. This NAND flash is muxed with OSPI NOR flash
through a physical switch (SW3.1). SW3.1 when set as 1 connects the NAND
flash to the SoC.

Signed-off-by: Apurva Nandan <a-nandan@ti.com>
Signed-off-by: Vignesh Raghavendra <vigneshr@ti.com>
Signed-off-by: Prasanth Babu Mantena <p-mantena@ti.com>

--- a/arch/arm/dts/k3-j721s2-common-proc-board-u-boot.dtsi
+++ b/arch/arm/dts/k3-j721s2-common-proc-board-u-boot.dtsi
@@ -117,10 +117,18 @@
 	bootph-all;
 };
 
+&mcu_fss0_ospi0_pins_default {
+	bootph-all;
+};
+
 &ospi0 {
-	flash@0 {
+	ospi0_nor: flash@0 {
 		bootph-all;
 	};
+};
+
+&ospi0_nand {
+		bootph-all;
 };
 
 &ospi1 {
