arm: dts: k3-j721s2: Add flash partition information
Add partition information to the OSPI NOR nodes.

Signed-off-by: Prasanth Babu Mantena <p-mantena@ti.com>

--- a/arch/arm/dts/k3-j721s2-common-proc-board-u-boot.dtsi
+++ b/arch/arm/dts/k3-j721s2-common-proc-board-u-boot.dtsi
@@ -124,6 +124,12 @@
 &ospi0 {
 	ospi0_nor: flash@0 {
 		bootph-all;
+		partitions {
+			bootph-all;
+			partition@3fc0000 {
+				bootph-all;
+			};
+		};
 	};
 };
 
@@ -132,7 +138,10 @@
 };
 
 &ospi1 {
-	status = "disabled";
+	bootph-all;
+	ospi1_nor: flash@0 {
+		bootph-all;
+	};
 };
 
 &usbss0 {
