Kconfig: Add standard boot as fallback and use bootcmd_ti_mmc
Standard boot is good for standardising the boot method but it still
lacks the flexibility to change things at runtime like our U-boot env
provides.

For easing the development process and support some other use cases that
standard boot it yet to support at this stage. Make standard boot as a
fallback for now and keep using our legacy boot method.

Tested-by: Dhruva Gole <d-gole@ti.com>
Signed-off-by: Manorit Chawdhry <m-chawdhry@ti.com>

--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -1638,7 +1638,7 @@ config USE_BOOTCOMMAND
 config BOOTCOMMAND
 	string "bootcmd value"
 	depends on USE_BOOTCOMMAND && !USE_DEFAULT_ENV_FILE
-	default "run envboot; bootflow scan -lb" if ARCH_K3
+	default "run envboot; run bootcmd_ti_mmc; bootflow scan -lb" if ARCH_K3
 	default "bootflow scan -lb" if BOOTSTD_DEFAULTS && CMD_BOOTFLOW_FULL
 	default "bootflow scan" if BOOTSTD_DEFAULTS && !CMD_BOOTFLOW_FULL
 	default "run distro_bootcmd" if !BOOTSTD_BOOTCOMMAND && DISTRO_DEFAULTS
