configs: am62x_lpsk: Enable MTD and spi-nand for AM62X-LPSK
Enable MTD and spi-nand configs to allow spi-nand boot in AM62X-LPSK.

Signed-off-by: Santhosh Kumar K <s-k6@ti.com>

--- a/configs/am62x_lpsk_r5_defconfig
+++ b/configs/am62x_lpsk_r5_defconfig
@@ -1,2 +1,8 @@
 #include <configs/am62x_evm_r5_defconfig>
 CONFIG_DEFAULT_DEVICE_TREE="k3-am62-r5-lp-sk"
+CONFIG_SPL_MTD=y
+CONFIG_SPL_MTD_LOAD=y
+CONFIG_SPL_NAND_SPI_SUPPORT=y
+CONFIG_SPL_DM_DEVICE_REMOVE=y
+CONFIG_DM_MTD=y
+CONFIG_MTD_SPI_NAND=y
