--- a/configs/am62x_lpsk_a53_defconfig
+++ b/configs/am62x_lpsk_a53_defconfig
@@ -1,2 +1,10 @@
 #include <configs/am62x_evm_a53_defconfig>
 CONFIG_DEFAULT_DEVICE_TREE="k3-am62-lp-sk"
+CONFIG_SPL_MTD=y
+CONFIG_SPL_MTD_LOAD=y
+CONFIG_SYS_MTD_U_BOOT_OFFS=0x280000
+CONFIG_SPL_NAND_SPI_SUPPORT=y
+CONFIG_CMD_MTD=y
+CONFIG_SPL_DM_DEVICE_REMOVE=y
+CONFIG_DM_MTD=y
+CONFIG_MTD_SPI_NAND=y
