arm: mach-k3: Add default ATF location for AM62/AM62a
commit 4129bdfbc1f4ce167747662db1d3b4f3f2fba2ff upstream

There is a default ATF load address that is used for devices that have
ATF running in SRAM. For AM62 and AM62a, ATF runs from DRAM. Instead
of having to override the address in every defconfig, make add a
default for these ATF in DRAM devices.

Signed-off-by: Andrew Davis <afd@ti.com>
Reviewed-by: Neha Malcom Francis <n-francis@ti.com>
Acked-by: Bryan Brattlof <bb@ti.com>
Signed-off-by: Bryan Brattlof <bb@ti.com>

--- a/arch/arm/mach-k3/Kconfig
+++ b/arch/arm/mach-k3/Kconfig
@@ -142,8 +142,8 @@ config K3_ATF_LOAD_ADDR
 	default 0x80000000 if (SOC_K3_AM625 || SOC_K3_AM62A7 || SOC_K3_AM62P5 || SOC_K3_J722S)
 	default 0x70000000
 	help
-	  The load address for the ATF image. This value defaults to 0x70000000
-	  if not provided in the board defconfig file.
+	  The load address for the ATF image. This value is used to build the
+	  FIT image header that places ATF in memory where it will run.
 
 config K3_DM_FW
 	bool "Separate DM firmware image"
