--- a/board/ti/am64x/am64x.env
+++ b/board/ti/am64x/am64x.env
@@ -1,6 +1,6 @@
 #include <env/ti/ti_common.env>
 #include <env/ti/mmc.env>
-#include <env/ti/k3_dfu.env>
+#include <env/ti/k3_dfu_combined.env>
 
 name_kern=Image
 console=ttyS2,115200n8
