arm: dts: k3-j722s*: Add overrides specific to OSPI
OSPI Booot requires overrides specific to R5 and also
to use DMA in R5 SPL stage the DM_TIFS needs to be enabled.
Add the corresponding overrides for R5 SPL stage.

Signed-off-by: Vaishnav Achath <vaishnav.a@ti.com>
Signed-off-by: Prasanth Babu Mantena <p-mantena@ti.com>

--- a/arch/arm/dts/k3-am62p-main.dtsi
+++ b/arch/arm/dts/k3-am62p-main.dtsi
@@ -641,6 +641,7 @@
 		#address-cells = <2>;
 		#size-cells = <2>;
 		ranges;
+		bootph-all;
 
 		ospi0: spi@fc40000 {
 			compatible = "ti,am654-ospi", "cdns,qspi-nor";
