--- a/arch/arm/dts/k3-j722s-evm-u-boot.dtsi
+++ b/arch/arm/dts/k3-j722s-evm-u-boot.dtsi
@@ -32,3 +32,17 @@
 &cpsw_port1 {
 	ti,syscon-efuse = <&cpsw_mac_syscon 0x0>;
 };
+
+&main_bcdma {
+	bootph-pre-ram;
+	reg = <0x00 0x485c0100 0x00 0x100>,
+	      <0x00 0x4c000000 0x00 0x20000>,
+	      <0x00 0x4a820000 0x00 0x20000>,
+	      <0x00 0x4aa40000 0x00 0x20000>,
+	      <0x00 0x4bc00000 0x00 0x100000>,
+	      <0x00 0x48600000 0x00 0x8000>,
+	      <0x00 0x484a4000 0x00 0x2000>,
+	      <0x00 0x484c2000 0x00 0x2000>;
+	reg-names = "gcfg", "bchanrt", "rchanrt", "tchanrt",
+		    "ringrt", "cfg", "tchan", "rchan";
+};
