HACK: arm: dts: ti: k3-j722s: Enable USB support
Update the USB0, USB1 nodes and enable them.
This is a HACK since the device-tree files have been reorganized in
Linux Device-tree across J722S and AM62P.

Signed-off-by: Ravi Gunasekaran <r-gunasekaran@ti.com>
[s-vadapalli@ti.com: Marked as HACK]
Signed-off-by: Siddharth Vadapalli <s-vadapalli@ti.com>

--- a/arch/arm/dts/k3-j722s-evm-u-boot.dtsi
+++ b/arch/arm/dts/k3-j722s-evm-u-boot.dtsi
@@ -46,3 +46,20 @@
 	reg-names = "gcfg", "bchanrt", "rchanrt", "tchanrt",
 		    "ringrt", "cfg", "tchan", "rchan";
 };
+
+&usbss0 {
+	bootph-pre-ram;
+};
+
+&usb0 {
+	dr_mode = "peripheral";
+	bootph-pre-ram;
+};
+
+&usbss1 {
+	status = "disabled";
+};
+
+&usb1 {
+	status = "disabled";
+};
