arm: dts: k3-am62-lp: Change frequency and read delay to support 8S mode
In AM62X-LP-SK, OSPI's frequency and read delay is set according to the
Octal DDR mode. Change it accordingly in it's DT node to support OSPI
SDR mode.

Signed-off-by: Santhosh Kumar K <s-k6@ti.com>
Signed-off-by: Vignesh Raghavendra <vigneshr@ti.com>

--- a/arch/arm/dts/k3-am62-lp-sk.dts
+++ b/arch/arm/dts/k3-am62-lp-sk.dts
@@ -272,6 +272,7 @@
 	status = "okay";
 	pinctrl-names = "default";
 	pinctrl-0 = <&ospi0_pins_default>;
+	assigned-clock-rates = <200000000>;
 	bootph-all;
 
 	flash@0{
@@ -279,12 +280,12 @@
 		reg = <0x0>;
 		spi-tx-bus-width = <8>;
 		spi-rx-bus-width = <8>;
-		spi-max-frequency = <25000000>;
+		spi-max-frequency = <50000000>;
 		cdns,tshsl-ns = <60>;
 		cdns,tsd2d-ns = <60>;
 		cdns,tchsh-ns = <60>;
 		cdns,tslch-ns = <60>;
-		cdns,read-delay = <2>;
+		cdns,read-delay = <1>;
 		cdns,phy-mode;
 		bootph-all;
 
