configs: am62ax: enable remote proc drivers
Enable K3-DSP and K3-R5FSS remote proc drivers for am62ax.

Signed-off-by: Hari Nagalla <hnagalla@ti.com>
Signed-off-by: Vignesh Raghavendra <vigneshr@ti.com>

--- a/configs/am62ax_evm_a53_defconfig
+++ b/configs/am62ax_evm_a53_defconfig
@@ -110,6 +110,8 @@ CONFIG_DM_REGULATOR_GPIO=y
 CONFIG_SPL_DM_REGULATOR_GPIO=y
 CONFIG_K3_SYSTEM_CONTROLLER=y
 CONFIG_REMOTEPROC_TI_K3_ARM64=y
+CONFIG_REMOTEPROC_TI_K3_R5F=y
+CONFIG_REMOTEPROC_TI_K3_DSP=y
 CONFIG_RESET_TI_SCI=y
 CONFIG_DM_SERIAL=y
 CONFIG_SOC_DEVICE=y
@@ -124,6 +126,7 @@ CONFIG_SYSRESET_TI_SCI=y
 CONFIG_DM_THERMAL=y
 CONFIG_FS_FAT_MAX_CLUSTSIZE=16384
 CONFIG_DM_SPI_FLASH=y
+CONFIG_CMD_REMOTEPROC=y
 
 #include <configs/am62ax_a53_usbdfu.config>
 #include <configs/am62ax_a53_usbmsc.config>
