configs: am62x_r5_usbdfu: Add support for AM62x-LP-SK board
Add USB DFU boot support for AM62x-LP-SK by extending the existing
am62x_r5_usbdfu.config.

Signed-off-by: Siddharth Vadapalli <s-vadapalli@ti.com>

--- a/configs/am62x_r5_usbdfu.config
+++ b/configs/am62x_r5_usbdfu.config
@@ -20,6 +20,7 @@ CONFIG_SPL_DFU=y
 # CONFIG_SPL_MMC is not set
 # CONFIG_SPL_FS_FAT is not set
 # CONFIG_SPL_LIBDISK_SUPPORT is not set
+# CONFIG_SPL_MTD is not set
 # CONFIG_SPL_SPI is not set
 # CONFIG_SPL_SYS_MALLOC is not set
 # CONFIG_CMD_GPT is not set
