configs: am62px_evm_a53_defconfig: Add support for USB DFU boot
The "am62x_a53_usbdfu.config" config fragment is applicable to AM62P as
well. Include it in "am62px_evm_a53_defconfig" to enable USB DFU boot on
AM62P.

Signed-off-by: Siddharth Vadapalli <s-vadapalli@ti.com>

--- a/configs/am62px_evm_a53_defconfig
+++ b/configs/am62px_evm_a53_defconfig
@@ -179,3 +179,5 @@ CONFIG_USB_GADGET_VENDOR_NUM=0x0451
 CONFIG_USB_GADGET_PRODUCT_NUM=0x6165
 CONFIG_SPL_DFU=y
 CONFIG_FS_FAT_MAX_CLUSTSIZE=16384
+
+#include <configs/am62x_a53_usbdfu.config>
