environment: ti: am64x: Fix mtdids and mtdparts
mtdids and mtdparts defined in nand.env are not suitable
for am64x-evm. Define its own here.

We deliberately don't define spi.nor partitions here as
it causes mtdparts and dfu to fail till user has done
"sf probe" command. This is because NOR flash is not
auto probed by u-boot.

Signed-off-by: Roger Quadros <rogerq@kernel.org>

--- a/board/ti/am64x/am64x.env
+++ b/board/ti/am64x/am64x.env
@@ -2,6 +2,9 @@
 #include <env/ti/mmc.env>
 #include <env/ti/k3_dfu_combined.env>
 
+mtdids=nand0=omap2-nand.0
+mtdparts=omap2-nand.0:2m(NAND.tiboot3),2m(NAND.tispl),2m(NAND.tiboot3.backup),4m(NAND.u-boot),256k(NAND.u-boot-env),256k(NAND.u-boot-env.backup),-(NAND.file-system)
+
 name_kern=Image
 console=ttyS2,115200n8
 args_all=setenv optargs earlycon=ns16550a,mmio32,0x02800000 ${mtdparts}
