environment: ti: k3_dfu*.env: add dfu_alt_info_nand
Add DFU (USB Device Firmware Update) alt_info settings for
NAND into 'dfu_alt_info_nand' environment variable.

User needs to set 'dfu_alt_info' variable
to 'dfu_alt_info_nand' before doing DFU to NAND.

e.g.
U-Boot # setenv dfu_alt_info ${dfu_alt_info_nand}
U-Boot # dfu 0 nand list
U-Boot # nand erase.part NAND.file-system
U-Boot # dfu 0 nand 0

Connect to PC Host and flash using dfu-util

linux-pc$ sudo dfu-util -D rootfs.ubi -a NAND.file-system -v

Signed-off-by: Roger Quadros <rogerq@kernel.org>

--- a/board/ti/am64x/am64x.env
+++ b/board/ti/am64x/am64x.env
@@ -1,6 +1,7 @@
 #include <env/ti/ti_common.env>
 #include <env/ti/mmc.env>
 #include <env/ti/k3_dfu_combined.env>
+#include <env/ti/nand.env>
 
 mtdids=nand0=omap2-nand.0
 mtdparts=omap2-nand.0:2m(NAND.tiboot3),2m(NAND.tispl),2m(NAND.tiboot3.backup),4m(NAND.u-boot),256k(NAND.u-boot-env),256k(NAND.u-boot-env.backup),-(NAND.file-system)
