--- a/include/env/ti/k3_dfu.env
+++ b/include/env/ti/k3_dfu.env
@@ -36,3 +36,12 @@ dfu_alt_info_ospi_nand=
 	ospi_nand.env.backup part 5;
 	ospi_nand.rootfs part 6;
 	ospi_nand.phypattern part 7
+
+dfu_alt_info_nand=
+	NAND.tiboot3 part 0 1;
+	NAND.tispl part 0 2;
+	NAND.tiboot3.backup part 0 3;
+	NAND.u-boot part 0 4;
+	NAND.u-boot-env part 0 5;
+	NAND.u-boot-env.backup part 0 6;
+	NAND.file-system part 0 7
