configs: am62px_evm_a53_defconfig: Add support for USB MSC boot
The am62x_a53_usbmsc.config config fragment can be reused for AM62Px to
enable USB MSC boot. Hence include the am62x_a53_usbmsc.config config
fragment in am62px_evm_a53_defconfig to enable support for USB MSC boot
on AM62Px.

Signed-off-by: Siddharth Vadapalli <s-vadapalli@ti.com>

--- a/configs/am62px_evm_a53_defconfig
+++ b/configs/am62px_evm_a53_defconfig
@@ -181,3 +181,4 @@ CONFIG_SPL_DFU=y
 CONFIG_FS_FAT_MAX_CLUSTSIZE=16384
 
 #include <configs/am62x_a53_usbdfu.config>
+#include <configs/am62x_a53_usbmsc.config>
