arm: dts: k3-j784s4-r5-evm: Add VTM node to R5 stage
Add VTM node to R5 boot stage so that AVS gets correctly configured for
J784S4 EVM.

Signed-off-by: Neha Malcom Francis <n-francis@ti.com>

--- a/arch/arm/dts/k3-j784s4-r5-evm.dts
+++ b/arch/arm/dts/k3-j784s4-r5-evm.dts
@@ -144,3 +144,8 @@
 	dr_mode = "peripheral";
 	maximum-speed = "super-speed";
 };
+
+&wkup_vtm0 {
+	bootph-pre-ram;
+	vdd-supply-2 = <&tps62873a>;
+};
